# shell

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE.txt  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  lint.yml  publish.yml  pytest.yml
docs/: api.md  index.md
requirements/: requirements-docs.txt  requirements-lint.txt  requirements-test.txt  requirements-types.txt
src/shell/: __about__.py  __init__.py  benchmark.py  cli.py  infer_omero_wsi.py  infer_wsi.py  inference.py  model.py  preprocessing.py
tests/: __init__.py  conftest.py  test_shell.py
